--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://sunbufu.github.io/index
+url: https://sunbufu.github.io
 date_format: "ordinal"
 title: 孙不服的博客
 #subtitle: "打码改变人生"
