--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,26 +2,10 @@
   name: sunbufu
   url: https://github.com/sunbufu
 
-- sitename: 掘金
-  name: mzlogin
-  url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
+- sitename: CSDN
+  name: sunbufu
+  url: https://blog.csdn.net/sunbufu
 
-- sitename: LinkedIn
-  name: mazhuang
-  url: https://www.linkedin.com/in/mazhuang
-
-- sitename: 博客
-  name: 码志
-  url: http://mazhuang.org
-
-- sitename: 微博
-  name: mzlogin
-  url: http://weibo.com/mzlogin
-
-- sitename: 知乎
-  name: mzlogin
-  url: http://www.zhihu.com/people/mzlogin
-
-- sitename: 豆瓣
-  name: 壮哥不胖
-  url: http://www.douban.com/people/freedim
+- sitename: GitHub
+  name: sunbufu
+  url: https://github.com/sunbufu
