--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: sunbufu
-#organization: zkh360.com
-#organization_url: http://www.zkh360.com
+organization: 瓜子
+organization_url: http://www.guazi.com
 github_username: sunbufu
 location: Beijing, China
 email: sunyoubufu@qq.com
