--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: mzlogin/mzlogin.github.io
+repository: sunbufu/sunbufu.github.io
 
 # ---------------- #
 #      Comments    #
@@ -121,5 +121,7 @@ simple_jekyll_search:
 # ---------------- #
 #    Analytics     #
 # ---------------- #
-google:
-    analytics_id: UA-80669434-1
+#google:
+#    analytics_id: UA-80669434-1
+baidu:
+    analytics_id: 18d81cb8e6a7547841c4804d6077afca
