--- a/_data/social.yml
+++ b/_data/social.yml
@@ -5,3 +5,7 @@
 - sitename: CSDN
   name: sunbufu
   url: https://blog.csdn.net/sunbufu
+
+- sitename: Email
+  name: sunyoubufu
+  url: mailto:sunyoubufu@qq.com
