--- a/_config.yml
+++ b/_config.yml
@@ -60,26 +60,26 @@ subscribe_rss: /feed.xml
 # ---------------- #
 markdown: kramdown
 kramdown:
-    input: GFM
+  input: GFM
 highlighter: rouge
 paginate: 8
 lsi: false
 quiet: false
 excerpt_separator: "\n\n"
 permalink: /:year/:month/:day/:title/
-gems:
-    - jekyll-github-metadata
-    - rouge
+plugins:
+  - jekyll-github-metadata
+  - rouge
 #     - jekyll-html-pipeline
-    - jekyll-paginate
-    - jekyll-sitemap
-    - jekyll-feed
-    - jemoji
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-feed
+  - jemoji
 #     - jekyll-mentions
 collections:
-    wiki:
-        output: true
-        permalink: /wiki/:path/
+  wiki:
+    output: true
+    permalink: /wiki/:path/
 
 repository: sunbufu/sunbufu.github.io
 
@@ -92,7 +92,7 @@ comments_provider: gitalk
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
 disqus:
-    username: 
+  username:
 # https://imsun.net/posts/gitment-introduction/
 #gitment:
 #    owner: sunbufu
@@ -102,10 +102,10 @@ disqus:
 #        client_secret: c8f83aea051671a33b02a9581678b75aa59cf2b6
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: sunbufu
-    repo: blog-comments
-    clientID: 07d28bfacc76b45d6694
-    clientSecret: 8c4678c17795da5dfc3b43aff746c669a28873ea
+  owner: sunbufu
+  repo: blog-comments
+  clientID: 07d28bfacc76b45d6694
+  clientSecret: 8c4678c17795da5dfc3b43aff746c669a28873ea
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
@@ -113,10 +113,10 @@ lazy_load_disqus : false
 #      Search      #
 # ---------------- #
 simple_jekyll_search:
-    # 是否支持全文搜索
-    fulltext: true
-    # 最多显示多少条搜索结果
-    limit: 10
+  # 是否支持全文搜索
+  fulltext: false
+  # 最多显示多少条搜索结果
+  limit: 10
 
 # ---------------- #
 #    Analytics     #
@@ -124,4 +124,4 @@ simple_jekyll_search:
 #google:
 #    analytics_id: UA-80669434-1
 baidu:
-    analytics_id: f3c45aa73d5475ac1af92f29b0912e09
+  analytics_id: f3c45aa73d5475ac1af92f29b0912e09
