--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,5 +7,5 @@
   url: https://blog.csdn.net/sunbufu
 
 - sitename: Email
-  name: sunyoubufu
+  name: sunyoubufu@qq.com
   url: mailto:sunyoubufu@qq.com
