Revert "icon 适配"
This reverts commit 70ea61e

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,5 +7,5 @@
   url: https://blog.csdn.net/sunbufu
 
 - sitename: Email
-  name: sunyoubufu@qq.com
+  name: sunyoubufu
   url: mailto:sunyoubufu@qq.com
