--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,25 @@
     "src": "favicon-32x32.png",
     "sizes": "32x32",
     "type": "image/png"
+  }, {
+    "src": "favicon-72x72.png",
+    "sizes": "72x72",
+    "type": "image/png"
+  }, {
+    "src": "favicon-152x152.png",
+    "sizes": "152x152",
+    "type": "image/png"
+  }, {
+    "src": "favicon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
+    "src": "favicon-256x256.png",
+    "sizes": "256x256",
+    "type": "image/png"
+  }, {
+    "src": "favicon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
   }]
 }
