--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "sunbufu's blog",
-  "short_name": "sunbufu's blog",
+  "short_name": "sunbufu",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
