--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://www.sunbufu.club
 date_format: "ordinal"
 title: 孙不服的博客
-subtitle: "Life is great and everything will be OK"
+subtitle: "Life is great and everything will be OK."
 description: "孙不服的博客"
 keywords: 孙不服的博客, sunbufu
 timezone: Asia/Shanghai
