--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,11 +1,14 @@
 - name: 码志
   url: http://mazhuang.org
 
-- name: 王二蛋
-  url: http://shaojie.wang
-
 - name: xoyabc
   url: https://www.louxiaohui.com
 
 - name: 一支笔
   url: https://yizibi.github.io
+
+- name: 小土刀
+  url: https://wdxtub.com
+
+- name: 王二蛋
+  url: http://shaojie.wang
