add friend link

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -13,5 +13,8 @@
 - name: 漠然
   url: https://blog.mritd.me
 
+- name: 杨正义
+  url: http://blog.zhengyi.one
+
 - name: 王二蛋
   url: http://shaojie.wang
