更新公司信息

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: sunbufu
-organization: 瓜子
-organization_url: http://www.guazi.com
+organization: 字节跳动
+organization_url: https://www.bytedance.com
 github_username: sunbufu
 location: Beijing, China
 email: sunyoubufu@163.com
